--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -38,8 +38,11 @@
 @article{alger2021interpretable,
       title={Interpretable {Faraday} Complexity Classification}, 
       author={M. J. Alger and J. D. Livingston and N. M. McClure-Griffiths and J. L. Nabaglo and O. I. Wong and C. S. Ong},
-      year={in press},
+      year={2021},
       journal={\pasa},
+      doi={10.1017/pasa.2021.10},
+      volume=38,
+      eid={E022},
 }
 
 @Article{     alhassan_first_2018,
