--- a/thesis/xid.tex
+++ b/thesis/xid.tex
@@ -535,7 +535,7 @@ In this chapter, we consider the problem of determining the host galaxies of rad
     They consider multiple subsamples of the training set, where each
     bootstrap subsample is sampled with replacement from the training set. To
     classify a new data point, the random forest takes the weighted average of
-    all classifications produced by each decision tree.
+    all classifications produced by each decision tree. For a more detailed description of these models, see \aref{sec:atlas-xid-models}.
 
   \subsection{Labels}\label{sec:atlas-xid-labels}
 
@@ -1367,7 +1367,7 @@ In this chapter, we consider the problem of determining the host galaxies of rad
   \end{itemize}
 
   \begin{sidewaystable}
-    \caption[Scores output by our trained classifiers for SWIRE~CDFS candidate host galaxies.]{Scores output by our trained classifiers for SWIRE~CDFS candidate host galaxies. Columns are defined in \autoref{sec:atlas-xid-scores}. Full table electronic.}
+    \caption[Scores output by our trained classifiers for SWIRE~CDFS candidate host galaxies.]{Scores output by our trained classifiers for SWIRE~CDFS candidate host galaxies. Columns are defined in \aref{sec:atlas-xid-scores}. Full table electronic.}
     \label{tab:cdfs-scores}
     \small\centering
     \begin{tabular}{ccccccccccc}
@@ -1409,7 +1409,7 @@ All & Compact & Resolved & All & Compact & Resolved & All & Compact & Resolved &
   \end{sidewaystable}
 
   \begin{sidewaystable}
-    \caption[Scores output by our trained classifiers for SWIRE~ELAIS-S1 candidate host galaxies.]{Scores output by our trained classifiers for SWIRE~ELAIS-S1 candidate host galaxies. Columns are defined in \autoref{sec:atlas-xid-scores}. Full table electronic.}
+    \caption[Scores output by our trained classifiers for SWIRE~ELAIS-S1 candidate host galaxies.]{Scores output by our trained classifiers for SWIRE~ELAIS-S1 candidate host galaxies. Columns are defined in \aref{sec:atlas-xid-scores}. Full table electronic.}
     \label{tab:elais-scores}
     \small\centering
     \begin{tabular}{ccccccccccc}
@@ -1484,7 +1484,7 @@ All & Compact & Resolved & All & Compact & Resolved & All & Compact & Resolved &
   \end{itemize}
 
   \begin{sidewaystable}
-    \caption[Cross-identifications for ATLAS~CDFS components.]{Cross-identifications for ATLAS~CDFS components. Columns are defined in \autoref{sec:atlas-xid-xids}. Full table electronic.}
+    \caption[Cross-identifications for ATLAS~CDFS components.]{Cross-identifications for ATLAS~CDFS components. Columns are defined in \aref{sec:atlas-xid-xids}. Full table electronic.}
     \label{tab:cdfs-xids}
     \tiny\centering
     \begin{tabular}{ccccccccccccc}
@@ -1564,7 +1564,7 @@ J032634.58-282022.8 & 51.6441 & -28.3397 & J032634.58-282022.8 & 51.6441 & -28.3
   \end{sidewaystable}
 
   \begin{sidewaystable}
-    \caption{Cross-identifications for ATLAS~ELAIS-S1 components. Columns are defined in \autoref{sec:atlas-xid-xids}. Full table electronic.}
+    \caption{Cross-identifications for ATLAS~ELAIS-S1 components. Columns are defined in \aref{sec:atlas-xid-xids}. Full table electronic.}
     \label{tab:elais-xids}
     \tiny\centering
     \begin{tabular}{ccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc}
