--- a/thesis/intro.tex
+++ b/thesis/intro.tex
@@ -92,7 +92,7 @@ During my PhD, I had the good fortune to collaborate with many talented authors 
 \begin{itemize}
     \item \emph{Radio Galaxy Zoo: Machine learning for radio source host galaxy cross-identification} (2018). \textbf{M. J. Alger}, J. K. Banfield, C. S. Ong, L. Rudnick, O. I. Wong, C. Wolf, H. Andernach, R. P. Norris, and S. S. Shabala. \emph{Monthly Notices of the Royal Astronomical Society} 478, pp. 5547--5563. This is the content of \autoref{cha:cross-id} with minor modifications.
     \item \emph{Radio Galaxy Zoo: Radio luminosity functions of extended sources} (in prep.). \textbf{M. J. Alger}, O. I. Wong, C. S. Ong, N. M. McClure-Griffiths, H. Andernach, L. Rudnick, S. S. Shabala, A. F. Garon, J. K. Banfield, A. D. Kapi\'nska, R. P. Norris, and A. J. M. Thomson. This is the content of \autoref{cha:rlfs} with minor modifications.
-    \item \emph{Interpretable Faraday Complexity Classification} (in press). \textbf{M. J. Alger}, J. D. Livingston, N. M. McClure-Griffiths, J. L. Nabaglo., O. I. Wong, and C. S. Ong. \emph{Publications of the Astronomical Society of Australia}. This is the content of \autoref{cha:faraday} with minor modifications.
+    \item \emph{Interpretable Faraday Complexity Classification} (2021). \textbf{M. J. Alger}, J. D. Livingston, N. M. McClure-Griffiths, J. L. Nabaglo., O. I. Wong, and C. S. Ong. \emph{Publications of the Astronomical Society of Australia} 38, E022. This is the content of \autoref{cha:faraday} with minor modifications.
     \item \emph{Radio Galaxy Zoo Data Release 1: visual identification of 75,641 radio morphologies from the FIRST and ATLAS surveys} (in prep.). O. I. Wong, A. F. Garon, \textbf{M. J. Alger}, K. W. Willett, L. Rudnick, J. K. Banfield, J. Swan, S. S. Shabala, H. Andernach, R. P. Norris, B. D. Simmons, A. D. Kapi\'nska, N. Seymour, et al.
     \item \emph{Radio Galaxy Zoo: CLARAN - a deep learning classifier for radio morphologies} (2019). C. Wu, O. I. Wong, L. Rudnick, S. S. Shabala, \textbf{M. J. Alger}, J. K. Banfield, C. S. Ong, S. V. White, A. F. Garon, R. P. Norris, H. Andernach, J. Tate, V. Lukic, H. Tang, K. Schawinski, and F. I. Diakogiannis. \emph{Monthly Notices of the Royal Astronomical Society} 482, pp. 1211--1230.
     \item \emph{Heightened Faraday Complexity in the inner 1 kpc of the Galactic Centre} (2021), by J. D. Livingston, N. M. McClure-Griffiths, B. M. Gaensler, A. Seta, and \textbf{M. J. Alger}. \emph{Monthly Notices of the Royal Astronomical Society} 502, pp. 3814--3828.
